<resources>
    <string name="app_name">Write Chinese</string>
    <string name="add_characters">Add Characters</string>
    <string name="add_a_set">Add A Set</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_character_grid">CharacterGridActivity</string>
    <string name="character">Character</string>
    <string name="pinyin">Pinyin</string>

    <string name="title_activity_write">WriteActivity</string>
    <string name="Definition">Definition</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="pen_size">Pen Size</string>
    <string name="about">About</string>
    <string name="practice">Practice</string>
    <string name="swipe_change_characters">Swipe to change</string>
    <string name="my_credits">Made by globe.</string>
    <string name="empty_list_set">Start by adding a new set of characters</string>
    <string name="empty_list_chars">Now add some characters to start practicing!</string>
    <string name="rate">Rate</string>
</resources>
