<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pen_size_tv"
        android:text="@string/pen_size"
        android:textSize="@dimen/text_size_large"
        android:textColor="@android:color/primary_text_light"
        android:layout_marginTop="@dimen/general_16dp"
        android:layout_marginBottom="@dimen/general_16dp"
        android:layout_marginLeft="@dimen/general_16dp"
        android:layout_marginRight="@dimen/general_16dp"/>

    <com.rey.material.widget.Slider
        android:id="@+id/pen_slider"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/pen_size_tv"
        android:padding="@dimen/general_16dp"
        app:sl_primaryColor="@color/colorAccent"
        app:sl_secondaryColor="@android:color/darker_gray"
        app:sl_thumbRadius="12dp"
        app:sl_thumbFocusRadius="10dp"
        app:sl_travelAnimDuration="5"
        app:sl_minValue="1"
        app:sl_maxValue="50"
        app:sl_value="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_below="@+id/pen_slider"
        android:layout_marginTop="@dimen/general_24dp">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />
    </LinearLayout>


</RelativeLayout>