<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ToolbarStyle"
        android:title="@string/about" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_toolbar"
        android:paddingStart="@dimen/general_24dp"
        android:paddingLeft="@dimen/general_24dp"
        android:paddingRight="@dimen/general_24dp"
        android:paddingEnd="@dimen/general_24dp"
        android:paddingTop="@dimen/general_24dp"
        android:paddingBottom="@dimen/general_24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icondrawable"/>
        <TextView
            android:layout_below="@id/logo"
            android:id="@+id/name_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/general_24dp"
            android:paddingBottom="@dimen/general_24dp"/>
        <TextView
            android:layout_below="@id/name_version"
            android:id="@+id/my_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_credits"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/general_24dp"/>
        <View
            android:id="@+id/about_divider"
            android:layout_below="@id/my_credit"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#20000000"
            android:layout_marginLeft="@dimen/general_8dp"
            android:layout_marginRight="@dimen/general_8dp"
            android:layout_marginBottom="@dimen/general_24dp"/>

        <TextView
            android:id="@+id/links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_divider"
            android:autoLink="web"/>
    </RelativeLayout>

</RelativeLayout>