<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_category_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ToolbarStyle"
        android:title="@string/add_characters"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_category_title_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_24dp">
        <EditText
            android:id="@+id/edit_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/general_24dp"
            android:layout_marginRight="@dimen/general_24dp"
            android:layout_marginEnd="@dimen/general_24dp"
            android:layout_marginStart="@dimen/general_24dp"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:focusable="true"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_category_description_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_24dp">
        <EditText
            android:id="@+id/edit_category_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/general_24dp"
            android:layout_marginRight="@dimen/general_24dp"
            android:layout_marginEnd="@dimen/general_24dp"
            android:layout_marginStart="@dimen/general_24dp"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:focusable="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="@dimen/general_24dp">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/edit_category_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="14dp"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/edit_category_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="14dp"
            android:textSize="15sp"
            android:text="@string/save"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />
    </LinearLayout>
</LinearLayout>