<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar">


    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_word_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/ToolbarStyle"
        android:title="@string/add_characters"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_character_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_dialog_padding_top">
        <EditText
            android:id="@+id/edit_character_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/abc_dialog_padding"
            android:layout_marginRight="@dimen/abc_dialog_padding"
            android:layout_marginEnd="@dimen/abc_dialog_padding"
            android:layout_marginStart="@dimen/abc_dialog_padding"
            android:inputType="textCapWords"
            android:maxLength="5"
            android:focusable="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_pinyin_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_dialog_padding_top">
        <EditText
            android:id="@+id/edit_pinyin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/abc_dialog_padding"
            android:layout_marginRight="@dimen/abc_dialog_padding"
            android:layout_marginEnd="@dimen/abc_dialog_padding"
            android:layout_marginStart="@dimen/abc_dialog_padding"
            android:inputType="textCapWords"
            android:maxLength="15"
            android:focusable="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_definition_til"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_dialog_padding_top">
        <EditText
            android:id="@+id/edit_definition_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/abc_dialog_padding"
            android:layout_marginRight="@dimen/abc_dialog_padding"
            android:layout_marginEnd="@dimen/abc_dialog_padding"
            android:layout_marginStart="@dimen/abc_dialog_padding"
            android:inputType="text"
            android:maxLength="100"
            android:focusable="true"/>

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="@dimen/abc_dialog_padding_top">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/edit_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="14dp"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/edit_dialog_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="14dp"
            android:textSize="15sp"
            android:text="@string/save"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="bottom|end" />
    </LinearLayout>

</LinearLayout>